--- a/Desktop/startbootstrap-clean-blog-gh-pages/about.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/about.html
@@ -56,7 +56,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('card_600_1435145472.jpg')">
+    <header class="masthead" style="background-image: url('pic3.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
