--- a/Desktop/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/contact.html
@@ -56,14 +56,14 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('card_600_1435145472.jpg')">
+    <header class="masthead" style="background-image: url('pic2.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Girls Not Brides</h1>
-              <span class="subheading">Helping to bring awareness for girls in need</span>
+              <h1>Donate Today!</h1>
+              <span class="subheading">Help the Girls Not Brides organization by donating money or time</span>
             </div>
           </div>
         </div>
