--- a/Desktop/startbootstrap-clean-blog-gh-pages/Stage1.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/Stage1.html
@@ -81,7 +81,7 @@
              </h3>
               <br>
               <center><input type=button value="Go talk to the girl's parents to try and convince them to call off the marriage" onclick="window.location.href='Stage2.html'" style="width:500px; background-color:#630620; color: white;"/></center>
-              <center><input type=button value="Walk away as it is none of your business" onclick="window.location.href=''" style="width:500px; background-color:#630620; color: white;"/></center>
+              <center><input type=button value="Walk away as it is none of your business" onclick="window.location.href='End1.html'" style="width:500px; background-color:#630620; color: white;"/></center>
               <br><br><br>
               <center><input type=button value="Go Back" onclick="window.location.href='about.html'" style="width:100px; background-color:#630620; color: white;"/></center>
           </div>
