--- a/Desktop/startbootstrap-clean-blog-gh-pages/Stage3.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/Stage3.html
@@ -81,8 +81,8 @@
               </h3>
               <br>
               <center><input type=button value="Run" onclick="window.location.href='Stage4.html'" style="width:500px; background-color:#630620; color: white;"/></center>
-              <center><input type=button value="Fight the guards" onclick="window.location.href=''" style="width:500px; background-color:#630620; color: white;"/></center>
-              <center><input type=button value="Get on your knees and beg them to stop" onclick="window.location.href=''" style="width:500px; background-color:#630620; color: white;"/></center>
+              <center><input type=button value="Fight the guards" onclick="window.location.href='End4.html'" style="width:500px; background-color:#630620; color: white;"/></center>
+              <center><input type=button value="Get on your knees and beg them to stop" onclick="window.location.href='End5.html'" style="width:500px; background-color:#630620; color: white;"/></center>
               <br><br><br>
               <center><input type=button value="Go Back" onclick="window.location.href='Stage2.html'" style="width:100px; background-color:#630620; color: white;"/></center>
           </div>
