--- a/Desktop/startbootstrap-clean-blog-gh-pages/Stage4.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/Stage4.html
@@ -80,8 +80,8 @@
                 You manage to run out the door. You notify the cops about what is going on. Later, you go back with the cops to the house where the rich family gets arrested. The cops ask you if there are any other families involved in trading their children in marriage. What do you tell them?
              </h3>
               <br>
-              <center><input type=button value='"No I have not seen any others"' onclick="window.location.href=''" style="width:500px; background-color:#630620; color: white;"/></center>
-              <center><input type=button value='"Yes, There was another family invovled"' onclick="window.location.href=''" style="width:500px; background-color:#630620; color: white;"/></center>
+              <center><input type=button value='"No I have not seen any others"' onclick="window.location.href='End6.html'" style="width:500px; background-color:#630620; color: white;"/></center>
+              <center><input type=button value='"Yes, There was another family invovled"' onclick="window.location.href='End7.html'" style="width:500px; background-color:#630620; color: white;"/></center>
               <br><br><br>
               <center><input type=button value="Go Back" onclick="window.location.href='Stage3.html'" style="width:100px; background-color:#630620; color: white;"/></center>
           </div>
