--- a/Desktop/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/contact.html
@@ -63,7 +63,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Donate Today!</h1>
-              <span class="subheading">Help the Girls Not Brides organization by donating money or time</span>
+              <span class="subheading">Help the Girls Not Brides organization by donating money</span>
             </div>
           </div>
         </div>
