--- a/Desktop/startbootstrap-clean-blog-gh-pages/index.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/index.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel = "shortcut icon" type = "image/img" href="img/India clipart.png">
+    <link rel = "shortcut icon" type = "image/img" href="img/india.png">
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
