--- a/Desktop/startbootstrap-clean-blog-gh-pages/Stage4.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/Stage4.html
@@ -81,7 +81,7 @@
              </h3>
               <br>
               <center><input type=button value='"No I have not seen any others"' onclick="window.location.href='End6.html'" style="width:500px; background-color:#630620; color: white;"/></center>
-              <center><input type=button value='"Yes, There was another family invovled"' onclick="window.location.href='End7.html'" style="width:500px; background-color:#630620; color: white;"/></center>
+              <center><input type=button value='"Yes, there was another family invovled"' onclick="window.location.href='End7.html'" style="width:500px; background-color:#630620; color: white;"/></center>
               <br><br><br>
               <center><input type=button value="Go Back" onclick="window.location.href='Stage3.html'" style="width:100px; background-color:#630620; color: white;"/></center>
           </div>
