--- a/Desktop/startbootstrap-clean-blog-gh-pages/about.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/about.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="game.js">Simulation</a>
+              <a class="nav-link" href="about.html">Simulation</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="post.html">Articles</a>
