--- a/Desktop/startbootstrap-clean-blog-gh-pages/index.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/index.html
@@ -269,7 +269,7 @@ chart.on('created', function() {
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="js/clean-blog.js"></script>
 
   </body>
 
