--- a/Desktop/startbootstrap-clean-blog-gh-pages/post.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/post.html
@@ -142,7 +142,7 @@ Earlier this year, UNICEF had released a report stating that the number of girls
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
+            <p class="copyright text-muted">Copyright &copy; KrAZ-E 2018</p>
           </div>
         </div>
       </div>
