--- a/Desktop/startbootstrap-clean-blog-gh-pages/post.html
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/post.html
@@ -74,7 +74,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <center><img class="article_images" src="Borgen_Project.jpg" alt="Borgen Project" style="width:200px;height:200px;"></center>
+          <center><img class="article_images" src="img/Borgen_Project.jpg" alt="Borgen Project" style="width:200px;height:200px;"></center>
           <br>
         </div>
         <div class="col-6">
@@ -87,7 +87,7 @@
       </div>
       <div class="row">
         <div class="col-6">
-          <center><img class="article_images" src="child_bride_fights_against_child_marriage.jpg" alt="Child Bride Fights Against Child Marriage" style="width:442px;height:200px;"></center>
+          <center><img class="article_images" src="img/child_bride_fights_against_child_marriage.jpg" alt="Child Bride Fights Against Child Marriage" style="width:442px;height:200px;"></center>
           <br>
         </div>
         <div class="col-6">
@@ -102,7 +102,7 @@ However, for a girl in rural India, it wasn't as simple as just saying no...</ce
       </div>
       <div class="row">
         <div class="col-6">
-          <center><img class="article_images" src="India_s_forgotten_child_brides.jpg" alt="India's Forgotten Child Brides" style="width:397px;height:200px;"></center>
+          <center><img class="article_images" src="img/India_s_forgotten_child_brides.jpg" alt="India's Forgotten Child Brides" style="width:397px;height:200px;"></center>
           <br>
         </div>
         <div class="col-6">
@@ -114,7 +114,7 @@ However, for a girl in rural India, it wasn't as simple as just saying no...</ce
       </div>
       <div class="row">
         <div class="col-6">
-          <center><img class="article_images" src="child_marriage.jpg" alt="Child Marriages On Decline" style="width:300px;height:200px;"></center>
+          <center><img class="article_images" src="img/child_marriage.jpg" alt="Child Marriages On Decline" style="width:300px;height:200px;"></center>
           <br>
         </div>
         <div class="col-6">
@@ -127,7 +127,7 @@ Ten years ago, a South Asian girl's risk of getting married as a child was about
       </div>
       <div class="row">
         <div class="col-6">
-          <center><img class="article_images" src="Tamil_Nadu.jpeg" alt="Tamil Nadu Sees Most Child Marriages" style="width:352px;height:200px;"></center>
+          <center><img class="article_images" src="img/Tamil_Nadu.jpeg" alt="Tamil Nadu Sees Most Child Marriages" style="width:352px;height:200px;"></center>
           <br>
         </div>
         <div class="col-6">
@@ -140,7 +140,7 @@ And it is Chennai, South India’s biggest hub of cultural, business and educati
       </div>
       <div class="row">
         <div class="col-6">
-          <center><img class="article_images" src="The_girl_that_sabotaged_her_own_wedding.jpg" alt="The Girl Who Sabotaged Her Own Wedding" style="width:413px;height:200px;"></center>
+          <center><img class="article_images" src="img/The_girl_that_sabotaged_her_own_wedding.jpg" alt="The Girl Who Sabotaged Her Own Wedding" style="width:413px;height:200px;"></center>
           <br>
         </div>
         <div class="col-6">
@@ -152,7 +152,7 @@ And it is Chennai, South India’s biggest hub of cultural, business and educati
       </div>
       <div class="row">
         <div class="col-6">
-          <center><img class"article_images" src="Graphic_Heart-Text-love-children-stop-child-abuse.png" alt="Child Protection From Violence" style="width:208px;height:200px;"></center>
+          <center><img class"article_images" src="img/Graphic_Heart-Text-love-children-stop-child-abuse.png" alt="Child Protection From Violence" style="width:208px;height:200px;"></center>
           <br>
         </div>
         <div class="col-6">
@@ -164,7 +164,7 @@ And it is Chennai, South India’s biggest hub of cultural, business and educati
       </div>
       <div class="row">
         <div class="col-6">
-        <center><img class="article_images" src="Child-Bride.png" alt="India Has The Highest Number Of Child Brides" style="width:360px;height:200px;"></center>
+        <center><img class="article_images" src="img/Child-Bride.png" alt="India Has The Highest Number Of Child Brides" style="width:360px;height:200px;"></center>
         <br>
         </div>
         <div class="col-6">
